fix webkit scrollbar height

--- a/app/index.scss
+++ b/app/index.scss
@@ -26,6 +26,7 @@ body {
   scrollbar-width: thin;
 
   ::-webkit-scrollbar {
+    height: 7px;
     width: 7px;
   }
 
